# nexus-resolve

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy-pages.yml
apps/dashboard/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.test.tsx  App.tsx  (+4 more)
apps/deep-dive/: app.js  index.html  styles.css
data/replay/: ad-gpo-not-applying.events.jsonl  backup-job-failed.events.jsonl  cloud-vm-unhealthy.events.jsonl  command-centre-alert-storm.events.jsonl  db-connection-pool.events.jsonl  disk-space-run.events.jsonl  disk-space.events.jsonl  firewall-rule-block.events.jsonl  iam-admin-role.events.jsonl  linux-high-load.events.jsonl  servicedesk-account-lockout.events.jsonl  vpn-packet-loss.events.jsonl
data/scenarios/: catalog.json
docs/: architecture.md  completion-audit.md  demo-script.md  demo-video.md  publish-runbook.md  risk-register.md  scoring-map.md  submission-answers.md  submission-checklist.md
scripts/: check-all.cmd  create-demo-video.cmd  create-demo-video.py  dev-backend.cmd  dev-dashboard.cmd  generate_scenarios.py  setup-all.cmd  start-deep-dive.cmd  start-demo.cmd  verify-live-openai.cmd  verify-live-openai.py
services/backend/: pyproject.toml
services/backend/app/: __init__.py  event_stream.py  main.py  mock_execute.py  models.py  openai_client.py  orchestrator.py  policy.py  rca.py  scenario_catalog.py  tools.py
services/backend/tests/: test_adversarial_policy.py  test_api.py  test_openai_client.py  test_orchestrator.py  test_policy.py  test_tools_exports.py
(+21 files in other folders)
