[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-resolve-backend"
version = "0.1.0"
description = "FastAPI backend for the NEXUS-RESOLVE policy-grounded remediation demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "openai>=2.0.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "httpx>=0.28.0",
  "pillow>=12.0.0",
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
